build(tokens): install and configure typescript

--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "MIT",
+  "devDependencies": {
+    "@tournesol-ui/ts-config": "*",
+    "typescript": "^5.0.4"
+  }
 }
