--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -2,15 +2,19 @@
   "name": "@tournesol-ui/tokens",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsup src/index.ts --format esm,cjs --dts",
+    "dev": "tsup src/index.ts --format esm,cjs --dts --watch"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@tournesol-ui/ts-config": "*",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.4"
   }
 }
