--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -2,5 +2,9 @@
   "name": "@tournesol-ui/eslint-config",
   "license": "MIT",
   "private": "true",
-  "main": "index.js"
+  "main": "index.js",
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
+    "eslint": "^8.40.0"
+  }
 }
