--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -25,9 +25,10 @@
     "vite": "^4.3.5"
   },
   "dependencies": {
+    "@tournesol-ui/eslint-config": "*",
     "@tournesol-ui/react": "*",
     "@tournesol-ui/tokens": "*",
-    "@tournesol-ui/eslint-config": "*",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
