--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tournesol-ui/eslint-config",
   "license": "MIT",
-  "private": "true",
+  "private": true,
   "main": "index.js",
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
