--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,6 +25,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.2",
     "@stitches/react": "^1.2.8"
   }
 }
