--- a/packages/docs/.eslintrc.json
+++ b/packages/docs/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": "@tournesol-ui/eslint-config"
+  "extends": [
+    "@tournesol-ui/eslint-config",
+    "plugin:storybook/recommended"
+  ]
 }
